--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ layout: page
 <h1 class="title">{{ page.title }}</h1>
 
 <span class="date">
-    <time datetime="{{ page.last-updated: | date:"%d-%m-%Y" }}">{{ page.last-updated: | date: "%A. %B %d, %Y" }}</time>
+    <time datetime="{{ page.last-updated | date:"%d-%m-%Y" }}">{{ page.last-updated | date: "%A. %B %d, %Y" }}</time>
     {% if site.read-time %} - {% include read-time.html %}{% endif %}
 </span>
 
