--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,9 @@
 <footer class="footer-main">
     {% include social-links.html %}
     
-    <a href="{{ site.parent-url }}">{{ site.title }}</a> © {{ site.time | date: '%Y' }}
+    <a href="{{ site.url }}">{{ site.title }}</a> © {{ site.time | date: '%Y' }}
 
-    <a class="link" href="{{ site.url }}/feed.xml" target="_blank">
+    <a class="link" href="{{ site.baseurl }}/feed.xml" target="_blank">
         <svg class="icon icon-rss">
             <use xlink:href="#icon-rss"></use>
         </svg>
