--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,8 +1,10 @@
 <nav class="{% if page.title == "Home" %}nav-home{% else %}nav{% endif %}">
     <ul class="list">
-        <li class="item">
-            <a class="link" href="{{ site.url }}/">SMILE's</a>
-        </li>
+        {% if page.title != "Home" %}
+            <li class="item">
+                <a class="link" href="{{ site.url }}/">SMILE's</a>
+            </li>
+        {% endif %}
 
         {% if site.blog == true %}
             {% if page.title != "Home" %}
