--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ layout: page
     <img class="title-image" src="{{ page.image }}" alt="{{ page.title }}">
 {% endif %}
 
-<h1 class="title">{{ page.title }}</h1>
+<h1 class="title">{{ page.emoji }} {{ page.title }}</h1>
 
 <span class="date">
     <time datetime="{{ page.last-updated | date:"%d-%m-%Y" }}">{{ page.last-updated | date: "%A. %B %d, %Y" }}</time>
